--- a/node-cheese-cake/user-profiles/package.json
+++ b/node-cheese-cake/user-profiles/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-cheese-cake",
+  "name": "user-profiles",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -8,16 +8,13 @@
   "dependencies": {
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
-    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
-    "hbs": "^4.1.1",
+    "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mongodb": "^3.6.3",
     "morgan": "~1.9.1",
-    "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   }
 }
