--- a/node-cheese-cake/package.json
+++ b/node-cheese-cake/package.json
@@ -16,6 +16,7 @@
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
     "mongodb": "^3.6.3",
+    "monk": "^7.3.2",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
