--- a/node-cheese-cake/package.json
+++ b/node-cheese-cake/package.json
@@ -19,6 +19,7 @@
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
     "local": "^0.3.3",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.13",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
