--- a/.gitignore
+++ b/.gitignore
@@ -3676,3 +3676,5 @@ node-cheese-cake/node_modules/wrappy/LICENSE
 node-cheese-cake/node_modules/wrappy/package.json
 node-cheese-cake/node_modules/wrappy/README.md
 node-cheese-cake/node_modules/wrappy/wrappy.js
+/.idea/
+/.idea/
